# Gender-Detector-with-ML

./: .gitignore  GenderDetector.ipynb  README.md  app.py  df_creation.ipynb  pyproject.toml  requirements.txt
Images-CelebA-1K/: celebA1K-test.csv  celebA1K-train.csv
src/gender_detector/: __init__.py  config.py  embedder.py  predictor.py  train.py
test/: test_predictor.py  test_training.py
