[project]
name = "gender-detector"
version = "1.0.0"
description = "Detect the apparent gender of a face image using face embeddings and an sklearn classifier."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
